# ContactlessEMVKernel

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  Readme.md  TODO.txt  build.sh  buildTester.sh  coverageTest.sh  setting.sublime-project  setting.sublime-workspace
cmake/modules/: CTestConfig.cmake  CodeCoverage.cmake  CppLint.cmake  CppcheckTargets.cmake  EnableCodeStyle.cmake  EnableCoverage.cmake  EnableCoverageReport.cmake  EnableDoxygen.cmake  EnableProfiling.cmake  EnablePython.cmake  EnableSlocCount.cmake  EnableTesting.cmake  FindGcovr.cmake  FindLcov.cmake  Findcppcheck.cmake  Findsloccount.cmake  lcov.cmake
cmake/toolchain/: clang.cmake
modular_src/: CMakeLists.txt
modular_src/Common/: CMakeLists.txt  aid.c  aid.h  bits.h  common.c  common.h  err.h  general.h  hal.c  hal.h  kernelIdentifier.h  tlv.c  tlv.h  utils.c  utils.h
modular_src/Emv/: CMakeLists.txt  candidateList.c  candidateList.h  fci.c  fci.h  select.c  select.h
modular_src/EntryPoint/: CMakeLists.txt  entryPoint.c  entryPoint.h  epCombinationSelection.c  epCombinationSelection.h  epCommon.h  epConfig.c  epConfig.h  epIndicators.c  epIndicators.h  epOutcome.c  epOutcome.h  epPreProcessing.c  epPreProcessing.h  epProtocolActivation.c  epProtocolActivation.h  epTrnxParameters.c  epTrnxParameters.h  ttq.h
modular_src/IntelligentMode/: CMakeLists.txt  intelligentMode.c  intelligentMode.h
modular_src/Kernel/: CMakeLists.txt  kernel.c  kernel.h
modular_src/Kernel/Paypass/: CMakeLists.txt  paypass.c  paypass.h
modular_src/ReaderManager/: CMakeLists.txt  readerManager.c  readerManager.h  theApp.c
modular_test/: BaseTest.cpp  BaseTest.h  CMakeLists.txt  defaultHalImpl.c  defaultHalImpl.h  matchers.h  testUtils.h
modular_test/AllTests/: CMakeLists.txt  main.cpp
modular_test/CommonTests/: CMakeLists.txt  CommonTests.h  bitsTests.h  main.cpp  tlvTests.h  utilsTests.h
modular_test/Configurations/: ConfigFactory.cpp  ConfigFactory.h  EntryPointConfigFactory.cpp
modular_test/Configurations/termsetting1/: config.txt
modular_test/Configurations/termsetting6/: config.txt
modular_test/Configurations/termsetting7/: config.txt
modular_test/EmvTests/: CMakeLists.txt  EmvTests.h  candidateListTests.h  main.cpp  selectTests.h
modular_test/EntryPointTests/: CMakeLists.txt  EntryPointTests.h  Test_2EA_001_00.h  Test_combinationSelection.h  Test_entryPoint.h  Test_protocolActivation.h  main.cpp
modular_test/Factories/: ConfigFactory.cpp  ConfigFactory.h  DirectoryEntryFactory.cpp  DirectoryEntryFactory.h  EntryPointConfigFactory.cpp  EntryPointConfigFactory.h  FciDataFactory.cpp  FciDataFactory.h  FciFactory.cpp  FciFactory.h
modular_test/IntelligentModeApp/: CMakeLists.txt  main.c
modular_test/Mockups/: mockHal.cpp  mockHal.h  mockerC.h  mockup_tests.h
modular_test/ReaderApp/: CMakeLists.txt  theApp.c
src/: CMakeLists.txt
src/Base/: base.h  bits.h  candidateList.c  candidateList.h  debug.c  debug.h  err.h  fci.c  fci.h  general.h  kernel.c  kernel.h  kernels.h  select.c  select.h  tlv.c  tlv.h  utils.c  utils.h
src/Common/: CMakeLists.txt  candidateList.c  select.c
src/EntryPoint/: entryPoint.c  entryPoint.h  epCombinationSelection.c  epCombinationSelection.h  epCommon.h  epConfig.c  epConfig.h  epConfigHelper.c  epConfigHelper.h  epIndicators.c  epIndicators.h  epOutcome.c  epOutcome.h  epPreProcessing.c  epPreProcessing.h  epProtocolActivation.c  epProtocolActivation.h  epTrnxParameters.c  epTrnxParameters.h  ttq.h
src/Hal/: hal.h  halInjection.c  halInjection.h
src/Hal/linux/: scard.c  scard.h  unPredNumGen.c  unPredNumGen.h
src/Kernels/: kernelInterface.h
src/Kernels/DummyKernel/: testKernel.c  testKernel.h
src/L2/: l2.c  l2.h
src/Py/: CMakeLists.txt  emvclessmodule.cpp  scard.cpp  scard.hpp  scardpy.cpp
src/Utils/: _vector.c  _vector.h
test/: BaseTest.cpp  BaseTest.h  CMakeLists.txt  _XMakLsts.txt  defaultHalImpl.c  defaultHalImpl.h  main.cpp  matchers.h  testUtils.h
test/App/: terminal.py  tester.py
test/Base/: candidateListTests.h  kernelTests.h  selectTests.h  utilsTests.h
test/Base_Test/: selectTests.h  tlvTests.h  utilsTests.h  vectorTests.h
test/Config/ConfigFactory/: configFactory.cpp  configFactory.h  termConfig01.cpp  termConfig01.h  termConfig02.cpp  termConfig02.h  termConfig03.h  termConfig04.cpp  termConfig04.h  termConfig05.cpp  termConfig05.h  termConfigDefault.cpp  termConfigDefault.h
test/Config/Configurations/: terminalConfigBuilder.py
test/Config/Configurations/termsetting1/: config.txt
test/Config/Configurations/termsetting13/: config.txt
test/Config/Configurations/termsetting2/: config.txt
test/Config/Configurations/termsetting3/: config.txt
test/Config/Configurations/termsetting8/: config.txt
test/EntryPoint/: Test_2EA_001_00_01.h  Test_2EA_002_00.h  Test_2EA_002_01.h  Test_2EA_002_02.h  Test_2EA_003_00.h  Test_2EA_004_00.h  Test_2EA_005_00.h  Test_2EA_005_01.h  entryPointTest.h  epCombinationSelectionTests.h  epConfigTests.h  epPreProcessingTests.h
test/EntryPoint_Test/: entryPointTest.h  epIndicatorsTests.h  epTrnxParametersTests.h
test/Hal_Test/: halTests.h
test/Mockups/: mockHal.cpp  mockHal.h  mockReader.cpp  mockReader.h  mockup_tests.h
test/Runner1/: CMakeLists.txt  main.cpp
test/Runner2/: CMakeLists.txt  main.cpp
test/Runner3/: CMakeLists.txt  testLog.json  tester.py
test/Runner4/: CMakeLists.txt  main.cpp
test/TestDevice_Sim/: BaseTest.cpp  BaseTest.h  Test_2EA_001_00_01.h  __Test_2EA_001_00_01.h  main.cpp
test/TestDevice_Sim/ConfigFactory/: configFactory.cpp  configFactory.h  termConfig02.cpp  termConfig02.h  termConfig03.cpp  termConfig03.h  termConfig04.h
test/TestUI/: CMakeLists.txt
test/UnitTests/: tlvTests.h  utilsTests.h
